// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorPicker should close the colorPicker when the no-hover div is clicked 1`] = `
<article>
  <div
    className="color-rectangle"
    onClick={[Function]}
    style={
      Object {
        "background": "undefined",
        "borderRadius": "1px",
        "height": "200px",
        "margin": "10px",
        "padding": "5px",
        "width": "100px",
      }
    }
  />
  <p />
  <p>
    Hex Code
  </p>
  <img
    alt="unlock button"
    className="unlock"
    onClick={[Function]}
    src="unlock.jpeg"
    style={
      Object {
        "background": "white",
        "height": "20px",
        "width": "20px",
      }
    }
  />
</article>
`;

exports[`ColorPicker should match snapshot when locked is true 1`] = `
<article>
  <div
    className="color-rectangle"
    onClick={[Function]}
    style={
      Object {
        "background": "undefined",
        "borderRadius": "1px",
        "height": "200px",
        "margin": "10px",
        "padding": "5px",
        "width": "100px",
      }
    }
  />
  <p />
  <p>
    Hex Code
  </p>
  <img
    alt="lock button"
    className="lock"
    onClick={[Function]}
    src="lock.png"
    style={
      Object {
        "background": "white",
        "height": "20px",
        "width": "20px",
      }
    }
  />
</article>
`;

exports[`ColorPicker should match the snapshot 1`] = `
<article>
  <div
    className="color-rectangle"
    onClick={[Function]}
    style={
      Object {
        "background": "undefined",
        "borderRadius": "1px",
        "height": "200px",
        "margin": "10px",
        "padding": "5px",
        "width": "100px",
      }
    }
  />
  <p />
  <p>
    Hex Code
  </p>
  <img
    alt="unlock button"
    className="unlock"
    onClick={[Function]}
    src="unlock.jpeg"
    style={
      Object {
        "background": "white",
        "height": "20px",
        "width": "20px",
      }
    }
  />
</article>
`;

exports[`ColorPicker should show the colorPicker when the div color-rectangle is clicked 1`] = `
<article>
  <div
    className="color-rectangle"
    onClick={[Function]}
    style={
      Object {
        "background": "undefined",
        "borderRadius": "1px",
        "height": "200px",
        "margin": "10px",
        "padding": "5px",
        "width": "100px",
      }
    }
  />
  <p />
  <p>
    Hex Code
  </p>
  <div
    className="color-rectangle"
    style={
      Object {
        "position": "absolute",
        "zIndex": "2",
      }
    }
  >
    <div
      className="no-hover"
      id="squareundefined"
      onClick={[Function]}
      style={
        Object {
          "bottom": "0px",
          "left": "0px",
          "position": "fixed",
          "right": "0px",
          "top": "0px",
        }
      }
    />
    <ColorPicker
      className="chrome-picker"
      color={
        Object {
          "a": 1,
          "h": 250,
          "l": 0.2,
          "s": 0.5,
        }
      }
      disableAlpha={true}
      onChangeComplete={[Function]}
      styles={Object {}}
      width={225}
    />
  </div>
  <img
    alt="unlock button"
    className="unlock"
    onClick={[Function]}
    src="unlock.jpeg"
    style={
      Object {
        "background": "white",
        "height": "20px",
        "width": "20px",
      }
    }
  />
</article>
`;
